--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,22 +23,22 @@ jobs:
         include-prerelease: true
 
     - name: Restore dependencies
-      run: dotnet restore .\src\Loon.sln
+      run: dotnet restore .\MachineDashboard.sln
 
     - name: Publish for Windows
-      run: dotnet publish .\src\Loon.Desktop --runtime win-x86 --self-contained true -c=Release /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:PublishReadyToRun=true
+      run: dotnet publish .\src\MachineDashboard --runtime win-x86 --self-contained true -c=Release /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:PublishReadyToRun=true
 
-    - name: Build Loon-win-x86.zip
+    - name: Build MachineDashboard-win-x86.zip
       uses: actions/upload-artifact@v1.0.0
       with:
-        name: Loon-win-x86.zip
+        name: MachineDashboard-win-x86.zip
         path: ${{ env.WINDOWS_PACKAGE_PATH }}
 
     - name: Publish for Linux
-      run: dotnet publish .\src\Loon.Desktop --runtime linux-x64 --self-contained true -c=Release /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:PublishReadyToRun=true
+      run: dotnet publish .\src\MachineDashboard --runtime linux-x64 --self-contained true -c=Release /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:PublishReadyToRun=true
 
-    - name: Build Loon-linux-x64.zip
+    - name: Build MachineDashboard-linux-x64.zip
       uses: actions/upload-artifact@v1.0.0
       with:
-        name: Loon-linux-x64.zip
+        name: MachineDashboard-linux-x64.zip
         path: ${{ env.LINUX_PACKAGE_PATH }}
