--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,6 +8,13 @@ on:
 env:
   WINDOWS_PACKAGE_PATH: 'src\MachineDashboard\bin\Release\net6.0\win-x86\publish\'
   LINUX_PACKAGE_PATH:   'src\MachineDashboard\bin\Release\net6.0\linux-x64\publish\'
+  MAIN_REPO_PROJECT: MachineDashboard.csproj
+  TEST_REPO_PROJECT: MachineDashboard.Test.csproj
+  MAIN_REPO_PATH: ./src/MachineDashboard
+  TEST_REPO_PATH: ./test/MachineDashboard.Test
+  TEST_RESULT_PATH: ./test/MachineDashboard/TestResults
+  TEST_LOG_FILE_NAME: test-results.trx
+  TEST_LOG_FILE_TYPE: trx
 
 jobs:
   build:
@@ -34,6 +41,17 @@ jobs:
         
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+    
+    - name: Run tests
+      run: dotnet test ${{ env.TEST_REPO_PATH }}/${{ env.TEST_REPO_PROJECT }} --no-build --verbosity normal --logger "${{ env.TEST_LOG_FILE_TYPE }};LogFileName=${{ env.TEST_LOG_FILE_NAME }}"
+
+    - name: Generate test report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with:
+        name: ${{ env.TEST_REPO_PROJECT }}
+        path: ${{ env.TEST_RESULT_PATH }}/${{ env.TEST_LOG_FILE_NAME }}
+        reporter: dotnet-${{ env.TEST_LOG_FILE_TYPE }}
 
     - name: Publish for Windows
       run: dotnet publish .\src\MachineDashboard --runtime win-x86 --self-contained true -c=Release /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:PublishReadyToRun=true
