--- a/src/MachineDashboard/appsettings.json
+++ b/src/MachineDashboard/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "ConnectionString": "mongodb://root:NEWPASSWORD@10.237.156.205:30001/?authSource=admin&readPreference=primary&ssl=false",
+  "ConnectionString": "",
   "DatabaseName": "InventoryDashboard"
 }
